--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ image = { version = "0.25.1", optional = true }
 leb128 = "0.2"
 serde = { version = "1.0", features = ["derive"], optional = true }
 uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
+flate2 = "1.0"
 
 [features]
 serde = ["dep:serde", "chrono/serde"]
