--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
 flate2 = "1.0"
 strum = { version = "0.26", features = ["derive"] }
 titlecase = "3.0"
+glam = "0.27.0"
 
 [features]
 serde = ["dep:serde", "chrono/serde"]
