--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,8 @@ flate2 = "1.0"
 strum = { version = "0.26", features = ["derive"] }
 titlecase = "3.0"
 glam = "0.27.0"
+serde_json = "1.0"
 
 [features]
-serde = ["dep:serde", "chrono/serde"]
+serde = ["dep:serde", "chrono/serde", "glam/serde", "uuid/serde"]
 image = ["dep:image"]
