--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ rand = "0.8.5"
 hex = "0.4.3"
 openssl = "0.10.66"
 tracing-forest = { version = "0.1.6", features = ["full"] }
-math = "0.11.0"
+base64 = "0.22.1"
 
 [features]
 serde = ["dep:serde", "chrono/serde", "glam/serde", "uuid/serde"]
