--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,24 +22,23 @@ serde = { version = "1.0.219", features = ["derive"], optional = true }
 uuid = { version = "1.16.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
 strum = { version = "0.27.1", features = ["derive"] }
 strum_macros = "0.27.1"
-titlecase = "3.4.0"
+titlecase = "3.5.0"
 time = "0.3.41"
-glam = "0.30.1"
+glam = "0.30.2"
 serde_json = "1.0.140"
-rand = "0.9.0"
-hex = "0.4.3"
-openssl = "0.10.72"
-tracing-forest = { version = "0.1.6", features = ["full"] }
+rand = "0.9.1"
+hex = {version = "0.4.3", optional = true}
+openssl = {version = "0.10.72", optional = true}
+tracing-forest = { version = "0.1.6", features = ["full"], optional = true}
 base64 = "0.22.1"
 reqwest = { version = "0.12.15", features = ["json"], optional = true }
-tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"], optional = true}
-gpui = { git = "https://github.com/zed-industries/zed" }
-env_logger = "0.11.8"
-unicode-segmentation = "1.12.0"
-proc_macros = { path = "proc_macros" }
+tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"], optional = true}
+gpui = { git = "https://github.com/zed-industries/zed", optional = true}
+env_logger = {version = "0.11.8", optional = true}
+unicode-segmentation = {version = "1.12.0", optional = true}
 
 [features]
 serde = ["dep:serde", "chrono/serde", "glam/serde", "uuid/serde"]
 image = ["dep:image"]
 request = ["dep:reqwest", "dep:tokio"]
-private-modules = []
+private-modules = ["dep:openssl", "dep:hex", "dep:tracing-forest", "dep:env_logger", "dep:gpui", "dep:unicode-segmentation"]
